# socket

./: .bazelrc  .gitignore  CMakeLists.txt  README.md  define.cmake  style
diagram/: class
doc/: why_ign_sigpipe.md
event/: CMakeLists.txt
event/config/: CMakeLists.txt  e_config.h.in
event/example/: CMakeLists.txt  test_loop.c
event/include/event/: e_alloc.h  e_def.h  e_event.h  e_include.h  e_io.h  e_loop.h  e_thread.h
event/src/: e_alloc.c  e_array.h  e_custom_fd.h  e_event.c  e_event.h  e_io.c  e_io.h  e_iowatcher.h  e_loop.c  e_math.c  e_math.h  e_mutex.c  e_mutex.h  e_platform.h  e_queue.h  e_thread.c  stc_queue.h  stc_vector.h
event/src/io/: e_io_add.c  e_io_free.c  e_io_handle.c  e_io_read.c
event/src/linux/: e_sys_epoll.c
event/src/loop/: e_custom_fd.c  e_custom_fd.h  e_loop_free.c  e_loop_new.c  e_loop_run.c
example/: CMakeLists.txt  main.c  tcp_echo_server.c  test.c  udp_client_server.c  udp_echo_client.c  udp_echo_server.c
examples/: CMakeLists.txt  example_tcp_echo_server.c  test.c  test_eloop.c
include/event/: e_alloc.h  e_api.h  e_array.h  e_atomic.h  e_buf.h  e_def.h  e_error.h  e_event.h  e_export.h  e_heap.h  e_io.h  e_iowatcher.h  e_list.h  e_loop.h  e_loop_timer.h  e_nio.h  e_queue.h  e_sockaddr.h  e_socket.h  e_ssl.h  e_unpack.h  ealloc.h  eatomic.h  eexport.h  eloop.h
include/event/al/: e_array.h  e_queue.h
include/event/io/: e_io.h  e_socket.h
include/event/linux/: e_fcntl.h  linux.h
include/event/macro/: e_def.h  e_platform.h
include/event/posix/: e_fcntl.h  e_posix.h  e_pthread.h  e_unistd.h
include/event/util/: e_alloc.h  e_atomic.h  e_string.h
include/event/win/: e_win.h
source/: BUILD  CMakeLists.txt  configi.h  e_alloc.c  e_error.c  e_event.c  e_include.h  e_io.c  e_io_readbuf.c  e_io_timer.c  e_loop.c  e_loop_timer.c  e_nio.c  e_sockaddr.c  e_socket.c  e_socket.h  e_ssl.c  e_unpack.c  e_watcher.h  ealloc.c  eevent.c  eevent.h  eloop.c  eloop.h  eplatform.h  epoll.c  event.h  iowatcher.h  os.h  test.c  test.h
source/config/: BUILD  CMakeLists.txt  check_function.cmake  check_header.cmake  config.bzl  config.c.tpl
source/io/: e_cb.c  e_fields.c  e_io.c  e_io_accept.c  e_io_add.c  e_io_cb.h  e_io_del.c  e_io_fields.c  e_io_get.c  e_io_handle.c  e_io_handle.h  e_io_read.c  e_io_readbuf.c  e_io_readbuf.h  e_io_unpack.c  e_io_unpack.h  e_socket.c
source/linux/: e_epoll.c  e_sys_epoll.c  linux.h  sys_call.h
source/loop/: e_custom_event.c  e_idle.c  e_server.c  e_userdata.c
source/mac/: e_kqueue.c
source/nio/: e_nio.c  e_nio.h  e_nio_accept.c  e_nio_connect.c  e_nio_handle.c  e_nio_handle.h  e_nio_read.c  e_nio_write.c
source/posix/: e_posix.c  event_posix.h
source/util/: e_alloc.c  e_math.c  e_math.h  e_string.c  e_time.c  e_time.h
source/win/: e_win.c  win.h
test/: run.c  runner.c  runner.h
